Fixed message overflow on preview page

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -72,3 +72,9 @@
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
   background-color: #555;
 }
+
+.message-body-preview{
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
